Created Cucumber tests for the first scenario
