# src/main/kotlin/com/ryzingtitan/datalogapi/data/datalogrecord/entities/DatalogRecordEntity.kt
@@ -2,14 +2,15 @@ package com.ryzingtitan.datalogapi.data.datalogrecord.entities
 
 import lombok.Generated
 import org.springframework.data.annotation.Id
-import org.springframework.data.relational.core.mapping.Table
+import org.springframework.data.mongodb.core.mapping.Document
+import java.time.Instant
+import java.util.*
 
 @Generated
-@Table("\"user\"")
-// the quotes are required in the table name since user is a keyword in PostgreSQL and H2
+@Document("datalogRecord")
 data class DatalogRecordEntity(
-    @Id val id: Int?,
-    val username: String,
-    val firstName: String,
-    val lastName: String
+    @Id val recordId: UUID = UUID.randomUUID(),
+    val sessionId: UUID,
+    val timestamp: Instant,
+    val intakeAirTemperature: Double?
 )
