# src/main/kotlin/com/ryzingtitan/datalogapi/domain/dtos/DatalogRecord.kt
@@ -1,11 +1,12 @@
 package com.ryzingtitan.datalogapi.domain.dtos
 
 import lombok.Generated
+import java.time.Instant
+import java.util.UUID
 
 @Generated
 data class DatalogRecord(
-    val id: Int,
-    val firstName: String,
-    val lastName: String,
-    val fullName: String
+    val sessionId: UUID,
+    val timestamp: Instant,
+    val intakeAirTemperature: Double?
 )
